--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="68dp"
         android:onClick="presionarDigito"
         android:text="2"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num1"
         app:layout_constraintEnd_toStartOf="@+id/btn_num3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -25,6 +26,7 @@
         android:layout_marginEnd="28dp"
         android:onClick="clicOperacion"
         android:text="="
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num0"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -35,6 +37,7 @@
         android:layout_marginTop="24dp"
         android:onClick="presionarDigito"
         android:text="."
+        android:textSize="34sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_num0"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -47,6 +50,7 @@
         android:layout_height="68dp"
         android:onClick="presionarDigito"
         android:text="0"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_decimal"
         app:layout_constraintEnd_toStartOf="@+id/btn_result"
         app:layout_constraintHorizontal_bias="0.5"
@@ -58,6 +62,7 @@
         android:layout_height="68dp"
         android:onClick="presionarDigito"
         android:text="3"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num2"
         app:layout_constraintEnd_toStartOf="@+id/btn_suma"
         app:layout_constraintHorizontal_bias="0.5"
@@ -69,6 +74,7 @@
         android:layout_height="68dp"
         android:onClick="clicOperacion"
         android:text="x"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -81,6 +87,7 @@
         android:layout_marginTop="24dp"
         android:onClick="presionarDigito"
         android:text="4"
+        android:textSize="34sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_num5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +100,7 @@
         android:layout_marginTop="24dp"
         android:onClick="presionarDigito"
         android:text="7"
+        android:textSize="34sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_num8"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,6 +112,7 @@
         android:layout_height="68dp"
         android:onClick="presionarDigito"
         android:text="8"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num7"
         app:layout_constraintEnd_toStartOf="@+id/btn_num9"
         app:layout_constraintHorizontal_bias="0.5"
@@ -116,6 +125,7 @@
         android:layout_marginTop="24dp"
         android:onClick="presionarDigito"
         android:text="1"
+        android:textSize="34sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_num2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,6 +137,7 @@
         android:layout_height="68dp"
         android:onClick="presionarDigito"
         android:text="6"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num5"
         app:layout_constraintEnd_toStartOf="@+id/btn_resta"
         app:layout_constraintHorizontal_bias="0.5"
@@ -138,6 +149,7 @@
         android:layout_height="68dp"
         android:onClick="clicOperacion"
         android:text="-"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -149,6 +161,7 @@
         android:layout_height="68dp"
         android:onClick="presionarDigito"
         android:text="5"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num4"
         app:layout_constraintEnd_toStartOf="@+id/btn_num6"
         app:layout_constraintHorizontal_bias="0.5"
@@ -159,6 +172,7 @@
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:text="b"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_div100"
         app:layout_constraintEnd_toStartOf="@+id/btn_div100"
         app:layout_constraintHorizontal_bias="0.5"
@@ -170,6 +184,7 @@
         android:layout_height="68dp"
         android:onClick="clicOperacion"
         android:text="÷"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_div100"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -179,20 +194,22 @@
         android:id="@+id/btn_clear"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="75dp"
         android:text="c"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_borrar"
         app:layout_constraintEnd_toStartOf="@+id/btn_borrar"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_num2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_div100"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:text="%"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_div"
         app:layout_constraintEnd_toStartOf="@+id/btn_div"
         app:layout_constraintHorizontal_bias="0.5"
@@ -204,6 +221,7 @@
         android:layout_height="68dp"
         android:onClick="clicOperacion"
         android:text="+"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -215,6 +233,7 @@
         android:layout_height="68dp"
         android:onClick="presionarDigito"
         android:text="9"
+        android:textSize="34sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_num8"
         app:layout_constraintEnd_toStartOf="@+id/btn_mult"
         app:layout_constraintHorizontal_bias="0.5"
@@ -224,7 +243,7 @@
         android:id="@+id/tv_num1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="16dp"
         android:hint="0.0"
         android:textAlignment="textEnd"
@@ -238,13 +257,13 @@
         android:id="@+id/tv_num2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:hint="0.0"
         android:textAlignment="textEnd"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_num1" />
 
