--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,7 +171,7 @@
         android:id="@+id/btn_borrar"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:text="b"
+        android:text="C"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_div100"
         app:layout_constraintEnd_toStartOf="@+id/btn_div100"
@@ -195,8 +195,9 @@
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:layout_marginTop="75dp"
-        android:text="c"
-        android:textSize="34sp"
+        android:singleLine="true"
+        android:text="AC"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_borrar"
         app:layout_constraintEnd_toStartOf="@+id/btn_borrar"
         app:layout_constraintHorizontal_bias="0.5"
