--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,12 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#83566C">
 
     <Button
         android:id="@+id/btn_num2"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="presionarDigito"
@@ -21,6 +23,8 @@
 
     <Button
         android:id="@+id/btn_result"
+        style="@style/OpsButtonStyle"
+        android:backgroundTint="#086D10"
         android:layout_width="165dp"
         android:layout_height="68dp"
         android:layout_marginEnd="28dp"
@@ -32,6 +36,7 @@
 
     <Button
         android:id="@+id/btn_decimal"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:layout_marginTop="24dp"
@@ -46,6 +51,7 @@
 
     <Button
         android:id="@+id/btn_num0"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="presionarDigito"
@@ -58,6 +64,7 @@
 
     <Button
         android:id="@+id/btn_num3"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="presionarDigito"
@@ -70,6 +77,7 @@
 
     <Button
         android:id="@+id/btn_mult"
+        style="@style/OpsButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="clicOperacion"
@@ -82,6 +90,7 @@
 
     <Button
         android:id="@+id/btn_num4"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:layout_marginTop="24dp"
@@ -95,6 +104,7 @@
 
     <Button
         android:id="@+id/btn_num7"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:layout_marginTop="24dp"
@@ -108,6 +118,7 @@
 
     <Button
         android:id="@+id/btn_num8"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="presionarDigito"
@@ -120,6 +131,7 @@
 
     <Button
         android:id="@+id/btn_num1"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:layout_marginTop="24dp"
@@ -133,6 +145,7 @@
 
     <Button
         android:id="@+id/btn_num6"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="presionarDigito"
@@ -145,6 +158,7 @@
 
     <Button
         android:id="@+id/btn_resta"
+        style="@style/OpsButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="clicOperacion"
@@ -157,6 +171,7 @@
 
     <Button
         android:id="@+id/btn_num5"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="presionarDigito"
@@ -169,6 +184,7 @@
 
     <Button
         android:id="@+id/btn_borrar"
+        style="@style/OpsButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:text="C"
@@ -180,6 +196,7 @@
 
     <Button
         android:id="@+id/btn_div"
+        style="@style/OpsButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="clicOperacion"
@@ -190,11 +207,14 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_div100" />
 
+    <!-- style="@style/NumericButtonStyle" -->
     <Button
         android:id="@+id/btn_clear"
+        style="@style/OpsButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTintMode="add"
         android:singleLine="true"
         android:text="AC"
         android:textSize="15sp"
@@ -207,6 +227,7 @@
 
     <Button
         android:id="@+id/btn_div100"
+        style="@style/OpsButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:text="%"
@@ -218,6 +239,7 @@
 
     <Button
         android:id="@+id/btn_suma"
+        style="@style/OpsButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="clicOperacion"
@@ -230,6 +252,7 @@
 
     <Button
         android:id="@+id/btn_num9"
+        style="@style/NumButtonStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:onClick="presionarDigito"
@@ -242,6 +265,7 @@
 
     <TextView
         android:id="@+id/tv_num1"
+        style="@style/CustomTextViewStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
@@ -256,9 +280,10 @@
 
     <TextView
         android:id="@+id/tv_num2"
+        style="@style/CustomTextViewStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         android:hint="0.0"
         android:textAlignment="textEnd"
